// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuIcon /> renders properly 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-2133906697 menuIcon hidden"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-2133906697"
    />
  </i>
</div>
`;

exports[`<MenuIcon /> renders properly when menu is open 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-2133906697 menuIcon open hidden"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-2133906697"
    />
  </i>
</div>
`;

exports[`<MenuIcon /> renders properly when the icon is visible is open 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-2133906697 menuIcon"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-2133906697"
    />
  </i>
</div>
`;
